test01/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: test01
spec:
  selector:
    svc: test01
  ports:
    - port: 80
