test01/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test01
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - test01.dhltest.sld1.uk
      secretName: test01.dhltest.sld1.uk-tls
  rules:
    - host: test01.dhltest.sld1.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 8000
